[gd_scene load_steps=14 format=2]

[ext_resource path="res://Font/Font-100.tres" type="DynamicFont" id=1]
[ext_resource path="res://Font/default.theme" type="Theme" id=2]
[ext_resource path="res://Font/Font-40.tres" type="DynamicFont" id=3]
[ext_resource path="res://Font/Font-70.tres" type="DynamicFont" id=4]
[ext_resource path="res://Font/Font-120.tres" type="DynamicFont" id=5]
[ext_resource path="res://Font/Font-80.tres" type="DynamicFont" id=6]
[ext_resource path="res://FirstStart/first_start.gd" type="Script" id=7]
[ext_resource path="res://Font/Font-50.tres" type="DynamicFont" id=8]
[ext_resource path="res://Language/Flags/En.png" type="Texture" id=9]
[ext_resource path="res://Language/Flags/Cze.png" type="Texture" id=10]
[ext_resource path="res://Language/language.gd" type="Script" id=11]
[ext_resource path="res://Font/Font-60.tres" type="DynamicFont" id=12]

[sub_resource type="SphereMesh" id=5]
radius = 7.5
height = 15.0
radial_segments = 150
rings = 1

[node name="FirstStart" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0509804, 0.0509804, 0.0509804, 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="GameName" type="Label" parent="CanvasLayer"]
margin_top = 151.0
margin_right = 1920.0
margin_bottom = 273.0
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 5 )
text = "fs_enter_game_name"
align = 1
valign = 1

[node name="NameLineEdit" type="LineEdit" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -240.0
margin_right = 300.0
margin_bottom = -125.0
rect_pivot_offset = Vector2( 175, 41 )
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 1 )
align = 1
max_length = 10
placeholder_text = "Name"

[node name="MaxChar" type="Label" parent="CanvasLayer/NameLineEdit"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -305.0
margin_top = 63.5
margin_right = 306.0
margin_bottom = 106.5
rect_pivot_offset = Vector2( -737, -309 )
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0.623529, 0.623529, 0.623529, 1 )
custom_fonts/font = ExtResource( 3 )
text = "fs_max_char"
align = 1
valign = 1

[node name="Change" type="Label" parent="CanvasLayer"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -120.0
margin_right = -742.0
rect_pivot_offset = Vector2( -737, -309 )
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0.623529, 0.623529, 0.623529, 1 )
custom_fonts/font = ExtResource( 4 )
text = "fs_you_can_change_name"
align = 2
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1200.0
margin_top = -111.0

[node name="Other" type="Label" parent="CanvasLayer/HBoxContainer"]
margin_top = 30.0
margin_right = 284.0
margin_bottom = 81.0
rect_pivot_offset = Vector2( -737, -309 )
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0.623529, 0.623529, 0.623529, 1 )
custom_fonts/font = ExtResource( 8 )
text = "os_Other settings"
align = 1
valign = 1

[node name="Sipka" type="Label" parent="CanvasLayer/HBoxContainer"]
margin_left = 288.0
margin_top = 30.0
margin_right = 303.0
margin_bottom = 81.0
rect_pivot_offset = Vector2( -737, -309 )
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0.623529, 0.623529, 0.623529, 1 )
custom_fonts/font = ExtResource( 8 )
text = ">"
align = 1
valign = 1

[node name="ChangeName" type="Label" parent="CanvasLayer/HBoxContainer"]
margin_left = 307.0
margin_top = 30.0
margin_right = 558.0
margin_bottom = 81.0
rect_pivot_offset = Vector2( -737, -309 )
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0.623529, 0.623529, 0.623529, 1 )
custom_fonts/font = ExtResource( 8 )
text = "os_Change name"
align = 1
valign = 1

[node name="Button" type="Button" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -128.0
margin_top = 160.0
margin_right = 128.0
margin_bottom = 268.0
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 6 )
text = "fs_accept"

[node name="Language" type="Label" parent="."]
margin_left = 830.0
margin_top = 502.0
margin_right = 1086.0
margin_bottom = 584.0
focus_neighbour_bottom = NodePath("../JoinButton")
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 8
custom_constants/shadow_offset_y = 8
custom_fonts/font = ExtResource( 12 )
text = "os_Language"
align = 1
valign = 1
script = ExtResource( 11 )

[node name="CzechTextureButton" type="TextureButton" parent="."]
margin_left = 814.0
margin_top = 583.0
margin_right = 840.0
margin_bottom = 599.0
rect_scale = Vector2( 5, 5 )
texture_normal = ExtResource( 10 )
expand = true
stretch_mode = 3

[node name="Dot" type="MeshInstance2D" parent="."]
position = Vector2( 958, 621 )
mesh = SubResource( 5 )

[node name="EnglishTextureButton" type="TextureButton" parent="."]
margin_left = 974.0
margin_top = 582.0
margin_right = 999.0
margin_bottom = 598.0
rect_scale = Vector2( 5, 5 )
texture_normal = ExtResource( 9 )
expand = true
stretch_mode = 3

[connection signal="text_changed" from="CanvasLayer/NameLineEdit" to="." method="_on_NameLineEdit_text_changed"]
[connection signal="pressed" from="CanvasLayer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="CzechTextureButton" to="Language" method="_on_CzechTextureButton_pressed"]
[connection signal="pressed" from="EnglishTextureButton" to="Language" method="_on_EnglishTextureButton_pressed"]
